# PSPM_SMP

./: .gitignore  README.md  diff-7b28a45-f221c945.diff
bsps/powerpc/include/mpc55xx/: fsl-mpc564xL.h
c/src/lib/libbsp/shared/: clockdrv_shell.h
cpukit/include/rtems/: scheduler.h
cpukit/include/rtems/score/: 2  overhead_measurement.h  scheduleredf.h  scheduleredfsmp.h  schedulerimpl.h  schedulersmpimpl.h
cpukit/rtems/src/: clocktick.c  ratemonperiod.c
cpukit/score/src/: kern_tc.c  schedulerdefaulttick.c  scheduleredfsmp.c  threaddispatch.c  watchdogtick.c
testsuites/rhealstone/rhtaskpreempt/: taskpreempt.c
testsuites/rhealstone/rhtaskswitch/: taskswitch.c
testsuites/smptests/: Makefile.am  configure.ac
testsuites/smptests/smp01/: init.c
testsuites/smptests/smp02/: system.h
testsuites/smptests/smppspm01/: 2  Makefile.am  app.c  app.h  init.c  main.c  pspm.h  pspmimpl.c  system.h
testsuites/smptests/smppspm01/app01/: app.c  app.h  main.c
testsuites/smptests/smppspm01/app02/: app.c  app.h  main.c
testsuites/smptests/smpschededf01/: init.c
